--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 			<artifactId>openxml4j</artifactId>
 			<version>1.0-beta</version>
 		</dependency>
+		<!-- Jira Integration with Selenium || Raise a bug for failure test cases || No Manual Bug in JIRA -->
+		<dependency>
+			<groupId>net.rcarz</groupId>
+			<artifactId>jira-client</artifactId>
+			<version>0.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
